# TreeLoc-plusplus

./: .gitignore  CMakeLists.txt  README.md  prepare_prior_query_eval_lcga.py  visualize_sequential_map_odom_replay_v3.py  visualize_temporal_map_odom_replay_rank_fallback_v4.py  z_only_ground_preprocessor.py
apps/: inter.cpp  intra.cpp  localize.cpp  localize_external.cpp  localize_hypotheses.cpp
cmake/: TreeLocPPConfig.cmake.in
config/: asaka_forest_4_localization_new_inter_relaxed_v1.yaml  asaka_query18_prior50_inter_relaxed.yaml  asaka_query19_prior50_inter_relaxed.yaml  asaka_query20_prior50_inter_relaxed.yaml  asaka_query21_prior50_inter_relaxed.yaml  asaka_query22_prior50_inter_relaxed.yaml  asaka_query23_prior50_inter_relaxed.yaml  asaka_query24_prior50_inter_relaxed.yaml  asaka_query25_prior50_inter_relaxed.yaml  asaka_query26_prior50_inter_relaxed.yaml  asaka_query27_prior50_inter_relaxed.yaml  asaka_query28_prior50_inter_relaxed.yaml  asaka_query29_prior50_inter_relaxed.yaml  asaka_query30_prior50_inter_relaxed.yaml  asaka_query31_prior50_inter_relaxed.yaml  asaka_query32_prior50_inter_relaxed.yaml  asaka_query33_prior50_inter_relaxed.yaml  asaka_query34_prior50_inter_relaxed.yaml  asaka_query35_prior50_inter_relaxed.yaml  asaka_query36_prior50_inter_relaxed.yaml  asaka_query37_prior50_inter_relaxed.yaml  asaka_query38_prior50_inter_relaxed.yaml  asaka_query39_prior50_inter_relaxed.yaml  asaka_query40_prior50_inter_relaxed.yaml  asaka_query41_prior50_lcga_inter_relaxed.yaml  asaka_query42_prior50_inter_relaxed.yaml  asaka_query42_prior50_lcga_inter_relaxed.yaml  asaka_query43_prior50_inter_relaxed.yaml  asaka_query44_prior50_inter_relaxed.yaml  asaka_query45_prior50_inter_relaxed.yaml  asaka_query46_prior50_inter_relaxed.yaml  asaka_query47_prior50_inter_relaxed.yaml  asaka_query48_prior50.yaml  asaka_query48_prior50_inter_relaxed.yaml  asaka_query49_prior50_inter_relaxed.yaml  asaka_query50_prior50_inter_relaxed.yaml  default.yaml  full_v01.yaml  full_v02.yaml  full_v03.yaml  (+11 more)
data/Wild_V01/: TreeManagerState_0.csv  TreeManagerState_1.csv  TreeManagerState_10.csv  TreeManagerState_100.csv  TreeManagerState_1000.csv  TreeManagerState_1001.csv  TreeManagerState_1002.csv  TreeManagerState_1003.csv  TreeManagerState_1004.csv  TreeManagerState_1005.csv  TreeManagerState_1006.csv  TreeManagerState_1007.csv  TreeManagerState_1008.csv  TreeManagerState_1009.csv  TreeManagerState_101.csv  TreeManagerState_1010.csv  TreeManagerState_1011.csv  TreeManagerState_1012.csv  TreeManagerState_1013.csv  TreeManagerState_1014.csv  TreeManagerState_1015.csv  TreeManagerState_1016.csv  TreeManagerState_1017.csv  TreeManagerState_1018.csv  TreeManagerState_1019.csv  TreeManagerState_102.csv  TreeManagerState_1020.csv  TreeManagerState_1021.csv  TreeManagerState_1022.csv  TreeManagerState_1023.csv  TreeManagerState_1024.csv  TreeManagerState_1025.csv  TreeManagerState_1026.csv  TreeManagerState_1027.csv  TreeManagerState_1028.csv  TreeManagerState_1029.csv  TreeManagerState_103.csv  TreeManagerState_1030.csv  TreeManagerState_1031.csv  TreeManagerState_1032.csv  (+1412 more)
data/Wild_V03/: TreeManagerState_0.csv  TreeManagerState_1.csv  TreeManagerState_10.csv  TreeManagerState_100.csv  TreeManagerState_1000.csv  TreeManagerState_1001.csv  TreeManagerState_1002.csv  TreeManagerState_1003.csv  TreeManagerState_1004.csv  TreeManagerState_1005.csv  TreeManagerState_1006.csv  TreeManagerState_1007.csv  TreeManagerState_1008.csv  TreeManagerState_1009.csv  TreeManagerState_101.csv  TreeManagerState_1010.csv  TreeManagerState_1011.csv  TreeManagerState_1012.csv  TreeManagerState_1013.csv  TreeManagerState_1014.csv  TreeManagerState_1015.csv  TreeManagerState_1016.csv  TreeManagerState_1017.csv  TreeManagerState_1018.csv  TreeManagerState_1019.csv  TreeManagerState_102.csv  TreeManagerState_1020.csv  TreeManagerState_1021.csv  TreeManagerState_1022.csv  TreeManagerState_1023.csv  TreeManagerState_1024.csv  TreeManagerState_1025.csv  TreeManagerState_1026.csv  TreeManagerState_1027.csv  TreeManagerState_1028.csv  TreeManagerState_1029.csv  TreeManagerState_103.csv  TreeManagerState_1030.csv  TreeManagerState_1031.csv  TreeManagerState_1032.csv  (+2369 more)
data/Wild_V04/: TreeManagerState_0.csv  TreeManagerState_1.csv  TreeManagerState_10.csv  TreeManagerState_100.csv  TreeManagerState_1000.csv  TreeManagerState_1001.csv  TreeManagerState_1002.csv  TreeManagerState_1003.csv  TreeManagerState_1004.csv  TreeManagerState_1005.csv  TreeManagerState_1006.csv  TreeManagerState_1007.csv  TreeManagerState_1008.csv  TreeManagerState_1009.csv  TreeManagerState_101.csv  TreeManagerState_1010.csv  TreeManagerState_1011.csv  TreeManagerState_1012.csv  TreeManagerState_1013.csv  TreeManagerState_1014.csv  TreeManagerState_1015.csv  TreeManagerState_1016.csv  TreeManagerState_1017.csv  TreeManagerState_1018.csv  TreeManagerState_1019.csv  TreeManagerState_102.csv  TreeManagerState_1020.csv  TreeManagerState_1021.csv  TreeManagerState_1022.csv  TreeManagerState_1023.csv  TreeManagerState_1024.csv  TreeManagerState_1025.csv  TreeManagerState_1026.csv  TreeManagerState_1027.csv  TreeManagerState_1028.csv  TreeManagerState_1029.csv  TreeManagerState_103.csv  TreeManagerState_1030.csv  TreeManagerState_1031.csv  TreeManagerState_1032.csv  (+1629 more)
include/treelocpp/: config.h  descriptors.h  eval.h  geometry.h  io.h  localize_hypotheses.h  matching.h  types.h
sample_data/oxford_v02/: TreeManagerState_0.csv  TreeManagerState_1.csv  TreeManagerState_10.csv  TreeManagerState_11.csv  TreeManagerState_12.csv  TreeManagerState_13.csv  TreeManagerState_14.csv  TreeManagerState_15.csv  TreeManagerState_16.csv  TreeManagerState_17.csv  TreeManagerState_18.csv  TreeManagerState_19.csv  (+49 more)
src/: config.cpp  descriptors.cpp  eval.cpp  geometry.cpp  io.cpp  localize_hypotheses.cpp  matching.cpp
tests/: frame_data_api_smoke.cpp  hypothesis_localization_api_smoke.cpp  test_localize_hypotheses_contract.py  test_z_only_ground_alignment.py  test_z_only_ground_preprocessor.py
tools/: analyze_z_only_ground_alignment.py  make_inter_sample.py  prepare_sample_data.py
(+61 files in other folders)
